[package]
name = "rust-network-game"
version = "0.1.0"
authors = ["Emil Segerbäck"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
nalgebra = {version = "0.18.1", features = ["serde-serialize"]}

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
