[package]
name = "libplen"
version = "0.1.0"
authors = ["Emil Segerbäck", "Hannes Tuhkala", "Malcolm Wigren", "Frans Skarman", "Robin Sliwa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rand_derive = "0.5.0"
serde = "1.0.102"
serde_derive = "1.0.102"
nalgebra = {version = "0.18.1", features = ["serde-serialize"]}
strum = "0.16.0"
strum_macros = "0.16.0"
bincode = "1.2.0"
